# saga-hydra

./: .gitignore  Anchor.toml  Makefile  measurement.txt
cli/src/: main.rs
frontend/: App.tsx  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/common/: Transactions.ts
frontend/components/: AccountBalance.tsx  AccountInfo.tsx  AccountTokenBalances.tsx  ConnectButton.tsx  DisconnectButton.tsx  FundAccountButton.tsx  RecordMessageButton.tsx  SignInButton.tsx  SignMessageButton.tsx
frontend/hooks/: useFanoutData.ts  useFanoutId.ts  useFanoutMembershipMintVouchers.ts  useFanoutMembershipVouchers.ts  useFanoutMints.ts
frontend/hydra-sdk/: failed.json  package.json
frontend/hydra-sdk/idl/: hydra.json
frontend/hydra-sdk/src/: index.ts
frontend/hydra-sdk/test/: airdrop_list.json  airdrop_results.json  cache.json  config.json  nft.ts  nfts.json
frontend/ios/: Podfile
frontend/ios/MySolanaMobileDapp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
frontend/ios/MySolanaMobileDapp.xcodeproj/: project.pbxproj
frontend/screens/: MainScreen.tsx
frontend/utils/: useAuthorization.tsx
js/: .solitarc.js  failed.json  package.json  somehelius.ts
js/idl/: hydra.json  jaredra.json
js/src/: index.ts
js/test/: nft.ts
program/: Cargo.toml
program-extender/: Cargo.toml
program-extender/src/: main.rs
program/src/: lib.rs  state.rs
switchboard-functions/savings_game/: Cargo.toml  Dockerfile  jarezies.json
(+48 files in other folders)
