[workspace]

[package]
name = "balancer-oracle-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "balancer-oracle-function"
path = "src/main.rs"

[dependencies]
serde = "^1"
switchboard-utils = "0.9.0"
switchboard-solana = { version = "0.29.73", features = ["macros", "secrets"] }
rust_decimal = { version = "1.30.0", features = ["maths"] }

bytemuck = "^1.14"
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"
secp256k1 = "0.28.0"
ethers-core = "0.13.0"
ethabi = "18.0.0"
ethers-contract-derive = "0.13.0"
ethers = "0.13.0"
serde_json = "*"
statistical = "1.0.0"
reqwest = { version = "0.11.6", features = ["json"] }
anchor-client = "0.29.0"
anchor-spl = "0.29.0"
solana-client = "*"
solana-account-decoder = "*"
spl-associated-token-account = "*"
metaboss = "0.34.0"
futures = "0.3.30"
rand = "0.8.5"
spl-token = "4.0.0"
